@@ -123,10 +123,11 @@ struct mosq_config {
 	mosquitto_property *unsubscribe_props;
 	mosquitto_property *disconnect_props;
 	mosquitto_property *will_props;
-	bool have_topic_alias; /* pub */
 	char *response_topic; /* rr */
-	bool tcp_nodelay;
 	char *options_file;
+	bool have_topic_alias; /* pub */
+	bool tcp_nodelay;
+	bool no_tls;
 };
 
 int client_config_load(struct mosq_config *config, int pub_or_sub, int argc, char *argv[]);
